2014-05-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/testsuite/gpdasm.project/op14e.asm,
    gputils/testsuite/gpdasm.project/op16e.asm:
    updated

  * gpasm/directive.c, libgputils/gpcfg.c, libgputils/gpcofflink.c
    libgputils/gpcoffopt.c, libgputils/gpdis.c, libgputils/gpprocessor.c,
    libgputils/gpprocessor.h:
    Some simplification. This codes uses some new definitions.

2014-05-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, libgputils/gpopcode.c, libgputils/gpopcode.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    The instruction codes were given own definition.

2014-05-28  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/Makefile.am, gpasm/Makefile.in, gplink/Makefile.am,
    gplink/Makefile.in:
    Minor update.

  * gpasm/coff.c, gpasm/directive.c, gpasm/evaluate.c,
    gpasm/gperror.c, gpasm/gperror.h, gpasm/parse.y,
    gpasm/ppscan.l, gpasm/preprocess.c, gpasm/processor.c,
    gpasm/scan.l, gpasm/special.c, gpasm/util.c,
    gplink/gplink.c, gplink/lst.c, libgputils/gpcofflink.c,
    libgputils/gpmemory.c, libgputils/gpmemory.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h,
    libgputils/gpreadhex.c, libgputils/gpreadobj.c,
    libgputils/gpsymbol.c, libgputils/gpsystem.c:
    Extended error and warning messages.

2014-05-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/testsuite/gpdasm.project/op12e.asm,
    gputils/testsuite/test:
    Added the enhanced 12 bit core test.

2014-05-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/testsuite/gpdasm.project/op14e.asm,
    gputils/testsuite/test:
    Added the enhanced 14 bit core test.

2014-05-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/testsuite/gpasm.project/listfiles/op14e.lst,
    gpasm/testsuite/gpasm.project/listfiles/pageselw1.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/pageselw2.lst:
    Removed the executable flags.
